3.6
----


3.5
----
* migrate jsonfield
* fixed fm service
* tweaked attachement etools serializer


3.4
----
* migrated to Django 3.1
* added filterform for export view
* added partner type for fam endpoints


3.3
----
* gateway-type endpoint
* tweaked admin
* migrated do Django 3.0
* removed dbtemplates
* added location gateway endpoint
* fixed xls illegal char issue
* fam added status
* disable export by default


3.2
----
* adjust email settings
* added filters


3.1
----
* fix jwt integration
* added fam exports


3.0
----
* fix ETL
* disable notifications
* update requirements celery 5, drf 3.12
* extract unicef-security


2.14
----
* add geonameid to locations endpoint
* add pd_url to pd indicator endpoint
* set budget values in process_country and not through mapping
* fix InterventionBudget loader queryset

2.13
----
* add new office endpoint
* update etools source to match latest etools
* add ordering to model Meta for pagination where needed

2.12
----
* add disaggregation field to PRP data report

2.11
----
* fixes #18276 - Add `Achievement in reporting period` field to the prp/datareport endpoint


2.10.3
------
* fixes Intervention.frs


2.10.2
------
* fixes DataReportLoader


2.10.1
------
* use poetry instead of pipenv
* BACKWARD INCOMPATIBLE: all `prp` endpoints to the source database moved to `sources/prp`
* BACKWARD INCOMPATIBLE: all `etools` endpoints to the source database moved to `sources/etools`
* Offline requests and File Exports.
* new endpoint audit/spotcheck - ticket #16739
* new endpoint prp/data-report - ticket #16971
* updates schema to eTools 7.4
* updates schema to latest PRP
* fixes RapidPRO endpoints pagination


2.10
----
* Not released in prod


2.9
---
* Not released in prod


2.8
---
* fixes #16623 - wrong visit_url in TPMActivity
* fixes Location / GtewayType Loaders


2.7
-----
* add dedicated check to prevent missing filter declaration
* fixes AuditResult `status` filter
* fixes some missing field filtering