@@ -1,0 +1,38 @@
+# Generated by Django 3.1.6 on 2021-03-11 17:02
+
+import django.contrib.gis.db.models.fields
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0140_auto_20210311_1629'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Locationsite',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('source_id', models.IntegerField(blank=True, db_index=True, null=True)),
+                ('last_modify_date', models.DateTimeField(auto_now=True)),
+                ('seen', models.DateTimeField(blank=True, null=True)),
+                ('country_name', models.CharField(max_length=100)),
+                ('schema_name', models.CharField(db_index=True, max_length=63)),
+                ('area_code', models.CharField(db_index=True, max_length=10)),
+                ('name', models.CharField(max_length=254)),
+                ('p_code', models.CharField(max_length=32)),
+                ('point', django.contrib.gis.db.models.fields.PointField(blank=True, null=True, srid=4326)),
+                ('is_active', models.BooleanField()),
+                ('parent', models.JSONField(blank=True, default=dict, null=True)),
+            ],
+            options={
+                'abstract': False,
+            },
+        ),
+        migrations.AddIndex(
+            model_name='locationsite',
+            index=models.Index(fields=['source_id', 'schema_name'], name='data_locati_source__7201e5_idx'),
+        ),
+    ]
