@@ -8,6 +8,7 @@ from .audit_special import AuditSpecial  # noqa
 from .audit_spotcheck import SpotCheck, SpotCheckFindings  # noqa
 from .fam import FAMIndicator  # noqa
 from .fm_questions import FMOntrack, FMQuestion  # noqa
+from .fm_settings import Locationsite  # noqa
 from .funds_grant import Grant  # noqa
 from .funds_reservation import FundsReservation  # noqa
 from .hact import HACT  # noqa
