@@ -1,5 +1,8 @@
 3.6
 ----
+* added location site endpoint
+* tweaked fm endpoints
+* added higher risk rating for partner endpoint
 
 
 3.5
